# njschooldata

./: .Rbuildignore  .gitignore  .travis.yml  404.html  CHANGES.html  CHANGES.md  CLAUDE.html  CLAUDE.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  DATA-CATEGORY-TAXONOMY.html  DATA-CATEGORY-TAXONOMY.md  DESCRIPTION  EXPANSION.html  EXPANSION.md  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  TODO.html  TODO.md  _pkgdown.yml  authors.html  authors.md  generate_readme_figs.R  index.html  index.md  llms.txt  pkgdown.yml  program_codes.Rda  search.json  sitemap.xml  tidy_data.Rmd
..Rcheck/: 00install.out  njschooldata-Ex.Rout
.github/: lint.yaml
R/: agg_calcs.R  cache.R  charter.R  config_constants.R  config_peer_groups.R  config_urls.R  config_years.R  data.R  dfg.R  directory.R  directory_contract.R  directory_role_map.R  discipline_foundation.R  enr.R  enrollment_names.R  entity_flags.R  era_breaks.R  essa.R  fetch_absence.R  fetch_advanced_courses.R  fetch_assessment.R  fetch_college_career.R  fetch_course_enrollment.R  fetch_courses.R  fetch_directory.R  fetch_discipline.R  fetch_ell.R  fetch_enrollment.R  fetch_facilities.R  fetch_facility_gis.R  fetch_finance.R  fetch_graduation.R  fetch_nj_assess.R  fetch_postsecondary_enrollment.R  fetch_restraint_seclusion.R  fetch_school_environment.R  fetch_spr.R  fetch_staff.R  fetch_staff_doedata.R  geo.R  (+51 more)
almanac/: almanac-0800.html  almanac-0900.html  almanac-1170.html  almanac-1290.html  almanac-1320.html  almanac-1400.html  almanac-1630.html  almanac-1950.html  almanac-2390.html  almanac-3250.html  almanac-3500.html  almanac-3540.html  almanac-3570.html  almanac-3890.html  almanac-3995.html  almanac-4010.html  almanac-4900.html  almanac-5190.html  almanac-5210.html  almanac-5240.html  almanac-5715.html  almanac-5840.html  almanac-5870.html  almanac-7320.html  almanac-7325.html  index.html
analysis/: 01-code-quality.md  02-architecture.md  03-dependencies.md  04-testing.md  05-documentation.md  06-data-currency.md  07-ci-cd-infrastructure.md  08-security-performance.md  09-task-list.md  10-transformation-summary.md
articles/: enrollment_hooks.html  enrollment_hooks.md  getting-started.html  index.html  (+34 more)
pynjschooldata/: README.md  core.py  pyproject.toml
pynjschooldata/pynjschooldata/: __init__.py  core.py
python/: README.md  pyproject.toml
python/src/njschooldata/: __init__.py  _r_bridge.py  assessment.py  directory.py  ell.py  enrollment.py  facilities.py  finance.py  graduation.py  sped.py
python/tests/: conftest.py  test_assessment.py  test_directory.py  test_enrollment.py  test_facilities.py  test_graduation.py  test_passthrough.py
(+3625 files in other folders)
