[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "njschooldata"
version = "0.9.0"
description = "Python bindings for NJ DOE school data via rpy2"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
authors = [
    {name = "Andrew Martin", email = "almartin@gmail.com"}
]
keywords = ["education", "new-jersey", "school-data", "rpy2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: R",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "rpy2>=3.5.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/almartin82/njschooldata"
Documentation = "https://almartin82.github.io/njschooldata/"
Repository = "https://github.com/almartin82/njschooldata"

[tool.hatch.build.targets.wheel]
packages = ["src/njschooldata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access to NJ DOE",
    "requires_r: tests that require R and njschooldata package",
]
